2004-08-08  Christian Ruppert <arc@users.sf.net>
	* uwm/configconvertors.c(uopt_str_flt and uopt_str_int): added
	  free(in->string) to close memory holes.
	* uwm/confparse.tab.y(uwm_yy_PushContext): fixed erroneous memory
	  reallocation size for workspaces.

2004-05-01  Christian Ruppert <arc@users.sf.net>
	* config/urdb: fixed ddd resource application name.

2004-05-01  Christian Ruppert <arc@users.sf.net>
	* uwm/uwm.c: cleaned up uwm initialisation in main()
	* uwm/uwm.c: fixed bug in HOSTDISPLAY which always used local hostname.
	* uwm/init.c: cleaned up InitUWM() a bit
	* uwm/init.c(ReadConfigFile), uwm/configconvertors.c, uwm/workspaces.c
	  uwm/settings_*_list.h, uwm/menu.c, uwm/properties.c, uwm/widgets.c:
	  fixed the bug with structures embedded in uwm_*_settings
	  structure which are now referenced by pointers to allow reliable
	  check wether option has been set or not.
	* uwm/configconvertors.c, uwm/confparse.h: added convertors for
	  string to int/float for default initialisation.

2004-03-28  Christian Ruppert <arc@users.sf.net>
	* uwm/Makefile.am: added conf_func.c to sources and conf_func.h,
	  conf_func_list.h, settings_global_list.h and
	  settings_workspace_list.h to headers.
	* uwm/conf_func.c: added file for functions to be used in
	  configuration files.
	* uwm/confparse.tab.y: added partial initialisation function context.

2004-03-26  Christian Ruppert <arc@users.sf.net>
	* uwm/*.h: added a short copyright notice to the header just to make
	  sure.
	* uwm/settings_workspace_list.h, uwm/settings_global_list.h: added
	  files to guarantee consistency between settings.h and
	  confparse.tab.y.
	* uwm/settings.h, uwm/confparse.tab.y: now including
	  uwm/settings_*_list.h for settings definition which guarantees
	  consistency.
	* uwm/workspaces.c, uwm/uwm.c: disabled ScreenCommand which will be
	  replaced by the new configuration language.
	* uwm/conf_func.h, uwm/conf_func_list.h: added files for configuration